# Multimodal-Dataset-Generator-for-Explainable-Synthetic-3d-Faults-V2

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  settings.yaml  workflow.md
Dataset/: DatasetMaker.py  export_multimodal_dataset.py  export_verification_trace_log.py  pipeline.py  slice2d.py  upload_to_huggingface.py  verified_hypotheses.jsonl
LLM/: __init__.py  config.json  vllm_client.py
NLI/: __init__.py  config.json  verifier.py
NaturalTransform/: __init__.py  text_transform.py
RagVerifier/: create_rag.py  generator_pipeline.py  llm_machine.py
Tracer/: __init__.py  evidence_template.py  tracer.py
Verifier/: create_rag.py  generator_pipeline.py  llm_machine.py  rag_verifier.py
examples/: base_fault_low.json
scripts/: control_parameter.py  dataset_generator_watcher.py  dataset_maker_watcher.py  graph_generation.py  graph_generator.py  graph_system.py  high_level_tracer.py  image_generator_watcher.py  images_generator.py  logger_color.py  low_level_tracer.py  properties_2d_graph.py  properties_2d_graph_watcher.py  runner.py  sample_generator.py  sample_image_generation.py  semantic_graph.py  synthoseis_config_guard.py  synthoseis_moving_deps.py  upload_watcher.py  visualize_embedding_space.py  visualize_graph_neo4j.py  visualize_properties_graph.py  visualize_sample.py  watch_dog.py  yaml_helper.py
scripts/Tracer/: evidence_template.py  tracer.py
src/simulationv2/: __init__.py  main.py  visualizer.py
